# PepperSpeech

./: CMakeLists.txt  README.md  install_dep.sh  package.xml  speach_server.py
launch/: pepperspeech.launch  pocketsphinx.launch  test_computer.launch  test_pepper.launch  test_speech_computer.launch  test_stream_audio.launch
scripts/: audio_soundProcessing.py  get_order.py  pepper_audio.py  pepper_response.py  recognizer.py  speech_recognition.py  stream_audio.py
scripts/test_scripts/: pepper_sound.py  recognizer.py
vocab/: corpus.txt  voice_cmd.dic  voice_cmd.kwlist
